--- a/simulation/weaving/config/weaving.sumo.cfg
+++ b/simulation/weaving/config/weaving.sumo.cfg
@@ -1,2 +1,23 @@
 <configuration>
+    <input>
+        <net-file value="weaving.net.xml"/>
+        <route-files value="weaving.rou.xml"/>
+        <additional-files value="weaving.add.xml"/>
+    </input>
+
+    <time>
+        <begin value="0"/>
+        <end value="4000"/>
+    </time>
+
+    <processing>
+        <step-length value="0.25"/>
+        <lanechange.duration value="4"/>
+    </processing>
+
+    <report>
+        <verbose value="true"/>
+        <no-duration-log value="false"/>
+        <no-warnings value="false"/>
+    </report>
 </configuration>
