[Oct 6] Weaving model analysis

--- a/simulation/weaving/config/weaving.sumo.cfg
+++ b/simulation/weaving/config/weaving.sumo.cfg
@@ -12,8 +12,12 @@
 
     <processing>
         <step-length value="0.25"/>
-        <lanechange.duration value="4"/>
+        <lanechange.duration value="6"/>
     </processing>
+
+    <random-number>
+        <seed value="23423"/>
+    </random-number>
 
     <report>
         <verbose value="true"/>
