[Dec 8] Rllib SAC implementation

--- a/ce299/assets/I80/i80.sumo.cfg
+++ b/ce299/assets/I80/i80.sumo.cfg
@@ -18,8 +18,8 @@
     </random-number>
 
     <report>
-        <verbose value="true"/>
-        <no-duration-log value="false"/>
-        <no-warnings value="false"/>
+        <verbose value="false"/>
+        <no-duration-log value="true"/>
+        <no-warnings value="true"/>
     </report>
 </configuration>
