--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 gputil==1.4.0
-gymnasium==0.26.3
+gym==0.23.1
+lz4==4.0.2
+numpy==1.22.0
+scipy==1.9.3
+tensorboardX==2.5.1
 ray==2.1.0
+ray[rllib]
+ray[tune]
